# Pointnet_Pointnet2_pytorch

./: .gitignore  README.md  inference_partseg.py  inference_partset.py  inference_seg_tooth.py  inference_support_reg.py  net.txt  net1.txt  provider.py  show_params.py  test_partseg.py  train_classification.py  train_partseg.py  train_partseg_support_n_reg.py  train_partseg_tooth.py  train_semseg.py  train_semseg_tooth.py
data_utils/: S3DISDataLoader.py  ShapeNetDataLoader.py  ToothPcdDataLoader.py  supportDataLoader.py
deal_data/: Mesh_Simplifier.py  deal_data_Class.py  deal_file.ipynb  move_data.py  readme.md  show_pcd.py
inference/: config.py  example_webclient.py  example_webclient_form.py  example_webserver.py  inference.py  network.py  webserver.py
inference/models/: README.md  get_file_md5.py  modelMD5.md
inference/test_datas/: test.pcd  test_with_normal.pcd
inference_C++/: inference.py  inference_onnx_cv.py  model_graph.txt  net2TorchscriptByPytorch_1_3_0.py  net2onnx.py  net2torch130.py  net2torchscript.py  netChangeParams.py  net_onnx.py  net_torchscript.py  network.py  readme.md  temp.txt  temp1.txt  testFunction.py  test_scripts.py
inference_C++/inference_cv/: CMakeLists.txt  inputs.pts  readme.md  test.cpp
inference_C++/inference_libtorch/: readme.md
inference_C++/inference_onnx/: CMakeLists.txt  fps.cpp  ops.cpp  readme.md
models/: pointnet2_part_seg_msg.py  pointnet2_part_seg_msg_n_reg.py  pointnet2_sem_seg.py  pointnet2_sem_seg_msg.py  pointnet2_utils.py  pointnet_cls.py  pointnet_part_seg.py  pointnet_sem_seg.py  pointnet_utils.py
visualizer/: eulerangles.py  show_pcl.py
